components/AddPetForm/AddPetForm.module.css
.section {
  padding: 28px 20px 20px;
  width: 335px;
  border-radius: 30px;
  background-color: #fff;
}

.titleContainer {
  display: flex;
  align-items: flex-end;
  gap: 8px;
  margin-bottom: 28px;
}

.header {
  font-weight: 700;
  font-size: 28px;
  line-height: 100%;
  letter-spacing: -0.03em;
  color: var(--foreground);
}

.subtitle {
  font-weight: 700;
  font-size: 14px;
  line-height: 129%;
  color: rgba(43, 43, 42, 0.4);
}

.genderBar {
  border: none;
  padding: 0;
  margin-bottom: 8px;
  display: flex;
  gap: 8px;
}

.genderBar > legend {
  display: none;
}

.radio {
  display: flex;
  align-items: center;
  cursor: pointer;
  border-radius: 30px;
  padding: 6px;
  width: 32px;
  height: 32px;
  transition:
    background-color 0.3s ease,
    box-shadow 0.3s ease;
}

.radio svg {
  transition:
    stroke 0.3s ease,
    fill 0.3s ease;
}

.radio > input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.radio:hover {
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
}

.femaleRadio {
  background-color: rgba(244, 63, 94, 0.1);
}

.femaleIcon {
  fill: none;
  stroke: #f43f5e;
}

.femaleRadio:has(input:checked) {
  background-color: #f43f5e;
}

.femaleRadio:has(input:checked) .femaleIcon {
  stroke: #fff;
}

.maleRadio {
  background-color: rgba(84, 173, 255, 0.1);
}

.maleIcon {
  fill: none;
  stroke: #54adff;
}

.maleRadio:has(input:checked) {
  background-color: #54adff;
}

.maleRadio:has(input:checked) .maleIcon {
  stroke: #fff;
}

.multipleRadio {
  background-color: #fff4df;
}

.multipleIcon {
  fill: #f6b83d;
}

.multipleRadio:has(input:checked) {
  background-color: #f6b83d;
}

.multipleRadio:has(input:checked) .multipleIcon {
  fill: #fff;
}

.petImage {
  border-radius: 100px;
  margin: 0 auto;
  margin-bottom: 16px;
}

.defaultImage {
  width: 68px;
  height: 68px;
  padding: 17px;
  border-radius: 100px;
  background-color: #fff4df;
  margin: 0 auto;
  margin-bottom: 16px;
}

.defaultImage > .icon {
  fill: #f6b83d;
}

.formInputs {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin-bottom: 31px;
}

.formInputs .input {
  width: 295px;
  height: 42px;
  padding: 12px;
  border-radius: 30px;
  outline: transparent;
  font-weight: 500;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: var(--foreground);
}

.formInputs .input::placeholder {
  font-weight: 500;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: rgba(38, 38, 38, 0.5);
}

.selectWrapper {
  display: flex;
  gap: 8px;
  align-items: center;
  justify-content: center;
}

/*  */
/* DatePicker Calendar styles and notes*/

/*Calendar window*/
.customPopper :global(.react-datepicker) {
  font-family: inherit;
  font-size: 10px;
  border: 1px solid rgba(38, 38, 38, 0.15);
  border-radius: 20px;
  background-color: #fff;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
  overflow: hidden;
}

/* Calendar header*/
.customPopper :global(.react-datepicker__header) {
  background-color: #fbe7c1;
  border-bottom: 1px solid rgba(109, 108, 108, 0.15);
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}

/* Calendar header arrows navigation*/
.customPopper :global(.react-datepicker__navigation) {
  align-items: center;
  justify-content: center;
  top: 8px;
}

/* Calendar header arrows style*/
.customPopper :global(.react-datepicker__navigation-icon::before) {
  border-color: rgba(38, 38, 38, 0.6);
}

/* Calendar header arrows hover style*/
.customPopper
  :global(
    .react-datepicker__navigation:hover
      .react-datepicker__navigation-icon::before
  ) {
  border-color: #262626;
}

/* Calendar days panel*/
.customPopper :global(.react-datepicker__day-names) {
  background-color: #fff4df;
  border-bottom: 1px solid rgba(38, 38, 38, 0.1);
  margin-bottom: 0;
}

/* Calendar days font*/
.customPopper :global(.react-datepicker__day-name) {
  color: rgba(38, 38, 38, 0.6);
}

/* Calendar outside-month days*/
.customPopper :global(.react-datepicker__day--outside-month) {
  color: rgba(38, 38, 38, 0.3);
}

/* Calendar selected day*/
.customPopper :global(.react-datepicker__day--selected) {
  background-color: #f6b83d !important;
  color: #000;
  border-radius: 50% !important;
}

/* Calendar hover day*/
.customPopper :global(.react-datepicker__day:hover) {
  border-radius: 50% !important;
  background-color: #fbe7c1 !important;
}

/* Calendar keyboard-selected day*/
.customPopper :global(.react-datepicker__day--keyboard-selected) {
  background-color: #f6b83d;
  border-radius: 50%;
  color: #000;
}

/*  */
/* Pet types select list styles */

.selectControl {
  width: 143px;
  padding: 12px;
  border-radius: 30px;
  font-weight: 500;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: var(--foreground);
  outline: transparent;
}

.selectControl svg {
  transition: transform 0.3s ease;
}

.dropDownArrow svg {
  transform: rotate(180deg);
}

.selectPlaceholder {
  font-weight: 500;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: rgba(38, 38, 38, 0.5);
}

.selectMenu {
  margin-top: 4px;
  width: 143px;
  height: 78px;
  border: 1px solid rgba(38, 38, 38, 0.15);
  border-radius: 15px;
  background-color: #fff;
  overflow: auto;
}

.selectMenuList {
  padding: 12px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.selectOption {
  font-weight: 500;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: rgba(38, 38, 38, 0.6);
}

.active {
  border: 1px solid #f6b83d;
}

.none {
  border: 1px solid rgba(38, 38, 38, 0.15);
}

.error {
  font-weight: 500;
  font-size: 10px;
  line-height: 120%;
  letter-spacing: -0.03em;
  color: #ef2447;
  margin-top: 2px;
}

.btnWrapper {
  display: flex;
  gap: 8px;
  align-items: center;
  justify-content: flex-end;
}

.oneBtnWrapper {
  justify-content: center;
}

.backBtn {
  width: 100px;
  height: 42px;
  padding: 12px;
  border-radius: 30px;
  background-color: rgba(38, 38, 38, 0.05);
  font-weight: 700;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: var(--foreground);
}

.backBtn:hover {
  background-color: rgba(38, 38, 38, 0.15);
}

.submitBtn {
  width: 100px;
  height: 42px;
  padding: 12px;
  border-radius: 30px;
  background-color: #f6b83d;
  font-weight: 700;
  font-size: 14px;
  line-height: 129%;
  letter-spacing: -0.03em;
  color: #fff;
}

.submitBtn:hover {
  background-color: #f9b020;
}

@media (min-width: 320px) and (max-width: 374px) {
  .section {
    width: 100%;
  }

  .titleContainer {
    gap: 6px;
  }

  .header {
    font-size: 24px;
  }

  .subtitle {
    font-size: 12px;
  }

  .label {
    width: 100%;
  }

  .formInputs .input {
    width: 100%;
  }

  .selectWrapper {
    gap: 4px;
  }

  .customPopper :global(.react-datepicker) {
    font-size: 9px;
  }

  .selectControl,
  .selectMenu {
    width: 100%;
  }

  .selectPlaceholder {
    font-size: 12px;
  }
}

@media (min-width: 768px) {
  .section {
    padding: 40px 136px;
    width: 704px;
    border-radius: 60px;
    position: relative;
  }

  .titleContainer {
    margin-bottom: 40px;
  }

  .header {
    font-size: 32px;
  }

  .subtitle {
    font-size: 16px;
    line-height: 125%;
  }

  .genderBar {
    margin-bottom: 76px;
  }

  .radio {
    padding: 8px;
    width: 40px;
    height: 40px;
  }

  .radio svg {
    width: 24px;
    height: 24px;
  }

  .petImage,
  .defaultImage {
    position: absolute;
    top: 130px;
    left: 50%;
    transform: translateX(-50%);
    margin-bottom: 12px;
  }

  .petImage {
    width: auto;
    height: 86px;
  }

  .defaultImage {
    width: 86px;
    height: 86px;
    padding: 21px;
  }

  .defaultImage > .icon {
    width: 44px;
    height: 44px;
  }

  .formInputs {
    gap: 18px;
    margin-bottom: 46px;
  }

  .formInputs .input {
    width: 432px;
    height: 52px;
    padding: 16px;
    font-size: 16px;
    line-height: 125%;
  }

  .formInputs .input::placeholder {
    font-size: 16px;
    line-height: 125%;
  }

  .selectWrapper {
    gap: 12px;
  }

  /*Calendar window*/
  .customPopper :global(.react-datepicker) {
    font-size: 14px;
  }

  .selectControl {
    width: 210px;
    height: 52px;
    font-size: 16px;
    line-height: 125%;
  }

  .selectPlaceholder {
    font-size: 16px;
    line-height: 125%;
  }

  .selectMenu {
    width: 210px;
    height: 142px;
  }

  .selectMenuList {
    padding: 14px;
  }

  .selectOption {
    font-size: 16px;
    line-height: 125%;
  }

  .error {
    font-size: 12px;
  }

  .backBtn {
    width: 170px;
    height: 48px;
    padding: 14px;
    font-size: 16px;
    line-height: 125%;
  }

  .submitBtn {
    width: 170px;
    height: 48px;
    padding: 14px;
    font-size: 16px;
    line-height: 125%;
  }
}

@media (min-width: 1280px) {
  .section {
    padding: 60px 80px;
    width: 592px;
    max-height: 654px;
  }

  .genderBar {
    margin-bottom: 82px;
  }

  .petImage,
  .defaultImage {
    top: 156px;
  }

  .formInputs {
    margin-bottom: 40px;
  }

  .selectMenu {
    height: 126px;
  }
}

